# RoverDaemons

./: CMakeLists.txt  README  README.md  create_channels.sh  install_opencv.sh  makefile  package.xml  rover_setup.md  setupPWM.sh  setup_rover_env.sh
DesignDiagrams/: .project  ControlDaemonActivityDiaggram.notation  ControlDaemonActivityDiaggram.uml  ControlDaemonModel.notation  ControlDaemonModel.uml  RoverStateMachine.notation  RoverStateMachine.uml  SubsumptionArchitecture.notation  SubsumptionArchitecture.uml  SubsystemStateMachines.notation  SubsystemStateMachines.uml
DesignDocs/: sd_control.txt
RoverControl/: RoverControl.cpp  RoverControl.hpp
comms/: comms.cpp
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: drive.pc
devel/share/drive/cmake/: driveConfig.cmake
drive/: MotorControl.cpp  MotorControl.hpp  MotorControl_test.cpp  makefile  sub_drive.cpp  test_drive.cpp
navigation/: sub_nav.cpp
src/comms/: comms.cpp
src/control/: CMakeLists.txt  package.xml  rover_control.cpp
src/control/src/: control.cpp
src/drive/: CMakeLists.txt  MotorControl.cpp  MotorControl.hpp  drive_node.cpp  package.xml  sub_drive.cpp  test_drive.cpp
src/drive/include/MotorControl/: MotorControl.hpp
src/drive/src/: MotorControl.cpp  drive.cpp
src/navigation/: sub_nav.cpp
src/range_finder/: CMakeLists.txt  package.xml
src/range_finder/src/: range_finder.cpp
src/telop/: Makefile  rc_teleoperation.c
